# NexusRE-MCP

./: .gitignore  .last_update  .version  README.md  automate_x64dbg.py  check_arch.py  check_exports.py  check_imports.py  check_loaded_plugins.py  check_plugins_menu.py  dump_all_text.py  dump_text.py  dump_x64dbg_log.py  extract_log.py  inject_mcp_configs.bat  install.bat  install_plugins.bat  main.py  nexus_overlay.py  nexusre_brain.db  patch_auth.py  patch_ida.py  pyproject.toml  refactor.py  requirements.txt  start_mcp_backend.bat  test_engine_switch.py  test_load_dll.py  test_log_creation.py  test_pluginit.py  test_pluginit_struct.py  test_py_command.py  test_x64dbg_exec.py  tools_list.txt  update.bat  update_readme.py
adapters/: base.py  binja.py  ce.py  cheatengine.py  dma.py  exdnspy.py  frida.py  gdb.py  ghidra.py  ida.py  kernel.py  network.py  r2.py  reclass.py  x64dbg.py
core/: auto_annotator.py  auto_session.py  cache.py  diff_engine.py  frida_library.py  memory.py  sandbox.py  server.py  session.py  setup_scanner.py  similarity.py  vuln_scanner.py
plugins/binja/: binja_backend_plugin.py
plugins/ce/: ce_backend_plugin.lua
plugins/exdnspy/: NexusRE.Exdnspy.csproj  exdnspy_backend_plugin.cs
plugins/ghidra/: ghidra_backend_plugin.java  ghidra_backend_plugin.py
plugins/ida/: ida_backend_plugin.py  ida_backend_plugin_v8.py
plugins/x64dbg/: x64dbg_backend_plugin.py
schemas/: models.py
scratch/: test_zeraphx_discovery.py  test_zeraphx_kernel.py
tests/: test_adapters.py  test_server.py
