[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexusre-mcp"
version = "4.0.0"
description = "Enterprise-grade MCP Server for Reverse Engineering — Auto-annotation, vulnerability scanning, cross-tool sync, and 50+ AI-powered analysis tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Homelycarlos", email = "homelycarlos@example.com"}
]
keywords = [
    "mcp", "reverse-engineering", "ida-pro", "ghidra", "x64dbg",
    "binary-analysis", "game-hacking", "decompilation", "frida",
    "vulnerability-scanner", "ai-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
all = [
    "frida-tools>=12.0.0",
    "r2pipe>=1.5.0",
    "pymem>=1.13.0",
    "yara-python>=4.3.0",
    "keystone-engine>=0.9.2",
    "capstone>=5.0.0",
    "unicorn>=2.0.1",
    "PyGithub>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/Homelycarlos/NexusRE-MCP"
Repository = "https://github.com/Homelycarlos/NexusRE-MCP"
Issues = "https://github.com/Homelycarlos/NexusRE-MCP/issues"

[project.scripts]
nexusre-mcp = "main:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["core", "adapters", "schemas", "plugins"]

[tool.hatch.build.targets.sdist]
include = [
    "core/",
    "adapters/",
    "schemas/",
    "plugins/",
    "main.py",
    "install_plugins.bat",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
